# codegen-oai

./: .gitignore  README.md  pyproject.toml
embeddings/: functions.py  main.py  questions.py
embeddings/embedding/: embed.py
